# python-json-logger

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  latest  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  setup.py  tox.ini  versions.json
.github/workflows/: test-suite.yml
3.1.0/: sitemap.xml
3.1.0.rc3/: 404.html  index.html  objects.inv  sitemap.xml
3.1.0.rc3/changelog/: index.html
3.1.0.rc3/contributing/: index.html
3.1.0.rc3/cookbook/: index.html
3.1.0.rc3/quickstart/: index.html
3.1.0.rc3/reference/: SUMMARY.txt
3.1.0.rc3/reference/pythonjsonlogger/: index.html
3.1.0.rc3/reference/pythonjsonlogger/core/: index.html
3.1.0.rc3/reference/pythonjsonlogger/defaults/: index.html
3.1.0.rc3/reference/pythonjsonlogger/json/: index.html
3.1.0.rc3/reference/pythonjsonlogger/msgspec/: index.html
3.1.0.rc3/reference/pythonjsonlogger/orjson/: index.html
3.1.0.rc3/search/: search_index.json
3.1.0.rc3/security/: index.html
3.1.0/changelog/: index.html
3.1.0/contributing/: index.html
3.1.0/cookbook/: index.html
3.1.0/reference/pythonjsonlogger/json/: index.html
3.1.0/reference/pythonjsonlogger/msgspec/: index.html
3.1.0/reference/pythonjsonlogger/orjson/: index.html
3.1.0/search/: search_index.json
3.2.0/: 404.html  index.html  objects.inv  sitemap.xml
3.2.0/changelog/: index.html
3.2.0/contributing/: index.html
3.2.0/cookbook/: index.html
3.2.0/quickstart/: index.html
3.2.0/reference/: SUMMARY.txt
3.2.0/reference/pythonjsonlogger/: index.html
3.2.0/reference/pythonjsonlogger/core/: index.html
3.2.0/reference/pythonjsonlogger/defaults/: index.html
3.2.0/reference/pythonjsonlogger/exception/: index.html
3.2.0/reference/pythonjsonlogger/json/: index.html
3.2.0/reference/pythonjsonlogger/msgspec/: index.html
3.2.0/reference/pythonjsonlogger/orjson/: index.html
3.2.0/reference/pythonjsonlogger/utils/: index.html
3.2.0/search/: search_index.json
3.2.0/security/: index.html
3.2.1/: 404.html  index.html  objects.inv  sitemap.xml
3.2.1/changelog/: index.html
3.2.1/reference/pythonjsonlogger/: index.html
3.2.1/reference/pythonjsonlogger/core/: index.html
3.2.1/reference/pythonjsonlogger/defaults/: index.html
3.2.1/reference/pythonjsonlogger/json/: index.html
3.2.1/reference/pythonjsonlogger/jsonlogger/: index.html
3.2.1/reference/pythonjsonlogger/msgspec/: index.html
3.2.1/reference/pythonjsonlogger/orjson/: index.html
3.2.1/reference/pythonjsonlogger/utils/: index.html
3.2.1/search/: search_index.json
3.2.1/security/: index.html
3.3.0/: objects.inv  sitemap.xml
3.3.0/changelog/: index.html
3.3.0/contributing/: index.html
3.3.0/cookbook/: index.html
3.3.0/quickstart/: index.html
3.3.0/reference/pythonjsonlogger/core/: index.html
3.3.0/reference/pythonjsonlogger/exception/: index.html
3.3.0/reference/pythonjsonlogger/json/: index.html
3.3.0/reference/pythonjsonlogger/msgspec/: index.html
3.3.0/reference/pythonjsonlogger/orjson/: index.html
3.3.0/search/: search_index.json
4.0.0/: 404.html  index.html  objects.inv  sitemap.xml
4.0.0/changelog/: index.html
4.0.0/contributing/: index.html
4.0.0/cookbook/: index.html
4.0.0/reference/: SUMMARY.txt
4.0.0/reference/pythonjsonlogger/: index.html
4.0.0/reference/pythonjsonlogger/core/: index.html
4.0.0/reference/pythonjsonlogger/defaults/: index.html
4.0.0/reference/pythonjsonlogger/exception/: index.html
4.0.0/reference/pythonjsonlogger/json/: index.html
4.0.0/reference/pythonjsonlogger/msgspec/: index.html
4.0.0/reference/pythonjsonlogger/orjson/: index.html
4.0.0/search/: search_index.json
4.0.0/security/: index.html
4.1.0/: sitemap.xml
4.1.0/changelog/: index.html
4.1.0/contributing/: index.html
4.1.0/cookbook/: index.html
4.1.0/quickstart/: index.html
4.1.0/reference/pythonjsonlogger/core/: index.html
4.1.0/reference/pythonjsonlogger/defaults/: index.html
4.1.0/reference/pythonjsonlogger/json/: index.html
4.1.0/reference/pythonjsonlogger/jsonlogger/: index.html
4.1.0/reference/pythonjsonlogger/msgspec/: index.html
4.1.0/reference/pythonjsonlogger/orjson/: index.html
4.1.0/reference/pythonjsonlogger/utils/: index.html
4.1.0/search/: search_index.json
4.1.0/security/: index.html
4.1.0/style-guide/: index.html
docs/: STYLE_GUIDE.md  changelog.md  contributing.md  cookbook.md  index.md  quickstart.md  security.md  style-guide.md
scripts/: gen_ref_nav.py
src/pythonjsonlogger/: __init__.py  core.py  defaults.py  json.py  jsonlogger.py  msgspec.py  orjson.py  simplejson.py  ultrajson.py
tests/: __init__.py  test_deprecation.py  test_dictconfig.py  test_formatters.py  test_jsonlogger.py  test_missing.py
