[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-json-logger"
version = "3.1.0.rc2"
description = "JSON Log Formatter for the Python Logging Package"
authors = [
    {name = "Zakaria Zajac", email = "zak@madzak.com"},
    {name = "Nicholas Hairs", email = "info+python-json-logger@nicholashairs.com"},
]
maintainers  = [
    {name = "Nicholas Hairs", email = "info+python-json-logger@nicholashairs.com"},
]

# Dependency Information
requires-python = ">=3.8"
dependencies = [
    "typing_extensions",
]

# Extra information
readme = "README.md"
license = {text = "BSD-2-Clause License"}
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[project.urls]
# homepage = "https://nhairs.github.io/python-json-logger/latest/"
GitHub = "https://github.com/nhairs/python-json-logger"

[project.optional-dependencies]
dev = [
    ## Optional but required for dev
    "orjson;implementation_name!='pypy' and python_version<'3.13'",
    "msgspec;implementation_name!='pypy' and python_version<'3.13'",
    ## Lint
    "validate-pyproject[all]",
    "black",
    "pylint",
    "mypy",
    ## Test
    "pytest",
    "freezegun",
    "backports.zoneinfo;python_version<'3.9'",
    "tzdata",
    ## Build
    "build",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pythonjsonlogger*"]

[tool.setuptools.package-data]
pythonjsonlogger = ["py.typed"]

[tool.black]
line-length = 100
